[package]
name = "advent-of-code"
edition = "2024"
authors = [
    "Willem Mouwen <willem@mouwen.dev>"
]
description = "Personal solutions to the problems published by the Advent of Code yearly events"
readme = "README.md"
repository = "https://github.com/wmouwen/advent-of-code"

autobins = false
autoexamples = false
autotests = false
autobenches = false

[[bin]]
name = "2015-1"
path = "2015/1/solution.rs"

[[bin]]
name = "2015-2"
path = "2015/2/solution.rs"
