[project]
name = "advent-of-code"
version = "0.dev"
dependencies = [
    "pip ~= 25.2",
    "networkx ~= 3.5",
    "ruff ~= 0.12",
]
requires-python = "~= 3.13"
authors = [
    { name = "Willem Mouwen", email = "willem@mouwen.dev" },
]
description = "Personal solutions to the problems published by the Advent of Code yearly events"
readme = "README.md"

[project.urls]
Repository = "https://github.com/wmouwen/advent-of-code"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["2015", "2016", "2017", "2018", "2019", "2020", "2021", "2022", "2023", "2024", "2025"]

[tool.ruff.format]
quote-style = "single"
